added functionality of revoke and refresh token
