# models/header.go
@@ -1,0 +1,6 @@
+package models
+
+type ReqHeader struct {
+	DeviceType    string `header:"P-DeviceType"`
+	Authorization string `header:"Authorization"`
+}
